# tabletReader

./: CMakeLists.txt  Makefile  README  SlidingStackedWidget.cpp  SlidingStackedWidget.h  documentwidget.cpp  documentwidget.h  filebrowser.cpp  filebrowser.h  filebrowsermodel.cpp  filebrowsermodel.h  flickable.h  images.qrc  loadpages.cpp  loadpages.h  logger.cpp  logger.h  main.cpp  tabletReader.pro  tabletReader.sln  tabletReader.vcxproj  window.cpp  window.h  worker.cpp  worker.h
help/: CMakeLists.txt  tabletReader.tex
qml/: aboutdialog.qml  filebrowser.qml  gotopage.qml  maintoolbar.qml  popupmenu.qml  zoompage.qml
qml/Core/: Display.qml  calculator.js
qml/ModalDialog/: Fader.qml  ModalDialog.qml
qml/PopupMenu/: AccordionList.qml  AccordionListModel.qml  PopupList.qml  PopupListModel.qml
qml/Toolbar/: Toolbar.qml  ToolbarItem.qml
qml/zoompage/: ZoomReel.qml
src/: CMakeLists.txt  Qt5_TabletReader_fr.ts  Qt5_TabletReader_ro.ts  config.h.in  filebrowsermodel.cpp  filebrowsermodel.h  images.qrc  logger.cpp  logger.h  main.cpp  okulardocument.cpp  okulardocument.h  pageprovider.cpp  pageprovider.h  qmlcppmediator.cpp  resources.qrc  tabletReader_fr.ts  tabletReader_ro.ts  window.cpp  window.h
src/qml/: filebrowser.qml  gotopage.qml  main.qml  maintoolbar.qml  qt5_aboutdialog.qml  qt5_filebrowser.qml  qt5_gotopage.qml  qt5_main.qml  qt5_maintoolbar.qml  qt5_waitdialog.qml  qt5_zoompage.qml
src/qml/GotoPage/: Button.qml  Display.qml  Qt5_Button.qml  Qt5_Display.qml
src/qml/MainPage/: Qt5_Spinner.qml  Spinner.qml
src/qml/ModalDialog/: Qt5_Button.qml  Qt5_Fader.qml  Qt5_ModalDialog.qml  Qt5_Visual.qml  Visual.qml
src/qml/Toolbar/: Qt5_Toolbar.qml  Qt5_ToolbarItem.qml  Qt5_ToolbarView.qml  Toolbar.qml  ToolbarItem.qml
src/qml/WaitDialog/: Qt5_WaitIndicator.qml
src/qml/zoompage/: Qt5_Button.qml  Qt5_Reel.qml  Qt5_ZoomReel.qml  ZoomReel.qml
tags/version1.0/: images.qrc  main.cpp  tabletReader.pro  window.cpp  worker.cpp
tags/version1.0/qml/: popupmenu.qml
tags/version1.0/qml/Toolbar/: Toolbar.qml
tags/version1.1/: documentwidget.h  main.cpp  tabletReader.pro  tabletReader.vcxproj  tabletReader_fr.qm  tabletReader_fr.ts  tabletReader_ro.qm  tabletReader_ro.ts  window.cpp  window.h
tags/version1.1/help/: tabletReader.tex
tags/version1.1/qml/: maintoolbar.qml
tags/version1.2/: filebrowsermodel.cpp  images.qrc  main.cpp  tabletReader_fr.ts  tabletReader_ro.qm  tabletReader_ro.ts  window.cpp  window.h  worker.cpp
tags/version1.2/qml/PopupMenu/: PopupListModel.qml
tags/version1.2/qml/Toolbar/: ToolbarView.qml  toolbar.js
tags/version2.0/: tabletReader.pro  tabletReader_fr.ts
tags/version2.0/3rdparty_win/chmlib/lib/: chmlib.lib
tags/version2.0/3rdparty_win/libchmfile/include/: libchmfile.h
tags/version2.0/qml/: maintoolbar.qml
tags/version2.0/qml/Toolbar/: Toolbar.qml
trunk/: SlidingStackedWidget.h  chmdocument.cpp  chmdocument.h  chmreply.cpp  chmreply.h  djvudocument.cpp  djvudocument.h  document.cpp  document.h  documentwidget.cpp  documentwidget.h  filebrowsermodel.cpp  filebrowsermodel.h  images.qrc  kdjvu.cpp  logger.cpp  main.cpp  pdfdocument.cpp  pdfdocument.h  tabletReader.pro  tabletReader.vcxproj  tabletReader_fr.qm  tabletReader_fr.ts  tabletReader_ro.qm  tabletReader_ro.ts  window.cpp  window.h  worker.cpp  worker.h
trunk/3rdparty_win/djvulibre/lib/: libdjvulibre.lib  libjpeg.lib
trunk/3rdparty_win/libchmfile/lib/: chmfile.lib
trunk/chmlib/include/: chm_lib.h
trunk/help/: tabletReader.tex
trunk/poppler-kde/lib/: poppler-qt4.lib
trunk/qml/: maintoolbar.qml  zoompage.qml
trunk/qml/ModalDialog/: ModalDialog.qml
trunk/qml/PopupMenu/: PopupList.qml  PopupListModel.qml
trunk/qml/Toolbar/: Toolbar.qml  ToolbarItem.qml  toolbar.js
trunk/qml/WaitDialog/: WaitIndicator.qml
