project(TabletReaderHelp)

FIND_PACKAGE(LATEX)

IF(LATEX_COMPILER)
  ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.dvi
			   COMMAND ${LATEX_COMPILER}
         ARGS ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.tex
         DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.tex
		      	   COMMENT "Tex2dvi")

IF(DVIPS_CONVERTER)
  ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.ps
			   COMMAND ${DVIPS_CONVERTER}
         ARGS ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.dvi
         -o ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.ps
         DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.dvi
			   COMMENT "dvi2ps")

IF(PS2PDF_CONVERTER)
  ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pdf
        		   COMMAND ${PS2PDF_CONVERTER}
               ARGS ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.ps
               DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.ps
			   COMMENT "ps2pdf")
       if (EXISTS ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pdf)
         configure_file(${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pdf ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pdf COPYONLY)
  endif()

  ADD_CUSTOM_TARGET(${PROJECT_NAME} ALL echo
    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pdf)
  INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pdf DESTINATION share/doc) 

ENDIF(PS2PDF_CONVERTER)
ENDIF(DVIPS_CONVERTER)
ELSE(LATEX_COMPILER)
  #if no latex compiler available use existing document
  INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pdf DESTINATION share/doc)
ENDIF(LATEX_COMPILER)

